@@ -1,0 +1,3 @@
+mktime succeeded
+Sun Jan  7 03:02:01 2001
+
